--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:LEDStreifen]
 platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
 	fastled/FastLED@^3.5.0
+	h2zero/NimBLE-Arduino@^1.4.0
+	BluetoothSerial@^2.0.0
